--- a/style/index.css
+++ b/style/index.css
@@ -217,13 +217,13 @@ body{
 	background: #fff;
 	display: block;
 	line-height: 110px;
-	/*position: relative;*/
+	position: relative;
 	margin-top: 480px;
 }
 .services ul{
 	margin-left: 150px;
 }
-.services .f1{
+.services .serve{
 	width: 280px;
 	height: 50px;
 	/*border:1px solid #0ff;*/
@@ -306,31 +306,6 @@ body{
 	margin-right: 17px;
 }
 
-/*.pro_pic a{
-	display: block;
-	width: 290px;
-	height: 250px;
-	text-align: center;
-	background:#fda;
-	margin-left: 160px;
-	margin-top:20px;
-	position: relative;
-}
-.pro_pic h1{
-	position: absolute;
-	font-weight: 400;
-	top: 100px;
-	left: 80px;
-}
-.pro_pic p{
-	position: absolute;
-	font-size: 14px;
-	border-top: 1px solid #000;
-	padding-top: 10px;
-	top: 135px;
-	left: 80px;
-}*/
-
 /*----cloud----*/
 .cloud{
 	height: 250px;
@@ -356,17 +331,6 @@ body{
 	top: -10px;
 	margin-left: 255px;
 }
-/*复用*/
-/*.birthday .birth{
-	font-size: 20px;
-}*/
-/*.birthday .more{
-	float: right;
-	position: relative;
-	font-size: 16px;
-	margin-top:-17px;
-	margin-right: 150px;
-}*/
 
 /*----birth-pic----*/
 .birth-pic .pic1{
@@ -417,16 +381,7 @@ body{
 	top: -10px;
 	margin-left: 255px;
 }
-/*.creative .create{
-	font-size: 20px;
-}*/
-/*.creative .more{
-	float: right;
-	position: relative;
-	font-size: 16px;
-	margin-top:-17px;
-	margin-right: 150px;
-}*/
+
 /*----creative-pic----*/
 
 .creative-pic .pic2{
@@ -538,6 +493,7 @@ body{
 	background-position: 0 -58px;
 	display: inline-block;
 	margin-top: 30px;
+	margin-left: 20px;
 	padding-right: 38px;
 	border-right: 1px solid #e2e2e2;
 	background: url(../images/bgr.png) 0 -58px;
@@ -606,4 +562,168 @@ body{
 	border-radius: 40px;
 	display: block;
 	margin-top: 10px;
+}
+/*----free-return----*/
+.free-return{
+	width: 1520px;
+	height: 241px;
+	background:#484442;
+	color: #e7e7e7;
+	float: left;
+	margin: 0 auto;
+}
+.free-return ul{
+	width: 1200px;
+	height: 139px;
+	margin: 0 auto;
+	/*background: #0ff;*/
+}
+.free-return li{
+	width: 230px;
+	float: left;
+	display: block;
+	line-height: 139px;
+	font-size: 18px;
+	font-weight: 700;
+	padding: 0 30px;
+}
+.it1{
+	width: 53px;
+	height: 53px;
+	display: inline-block;
+	vertical-align: middle;
+	margin-top: -3px;
+	margin-right: 16px;
+}
+.item1-bgr1{
+	background: url(../images/bgr1.png) left top;
+}
+
+.item2-bgr1{
+	background: url(../images/bgr1.png) -105px top;
+}
+
+.item3-bgr1{
+	background: url(../images/bgr1.png) -158px top;
+}
+
+.item4-bgr1{
+	background: url(../images/bgr1.png) -211px top;
+}
+/*----help----*/
+.free-return .help{
+	width: 1200px;
+	height: 98px;
+	line-height: 98px;
+	color: #e7e7e7;
+	/*background: pink;*/
+	margin: 0 auto;
+	border-top: 2px solid #666;
+	border-bottom: 2px solid #666;
+}
+.h_lf{
+	/*margin: 0 auto;*/
+	float: left;
+
+}
+.h_lf a{
+	color: #c3c3c3;
+	font-size: 12px
+}
+.h_lf span{
+	margin-right: 16px;
+	font-size: 12px;
+}
+.h_rg{
+	height: 102px;
+	float: right;
+}
+.h_rg p{
+	/*display: block;*/
+	font-size: 0;
+}
+.h_rg a{
+	height: 10px;
+	font-size: 12px;
+	border-right: 1px solid #c3c3c3;
+	color: #c3c3c3;
+	padding:0 10px;
+}
+/*----footer----*/
+.footer{
+	width: 1520px;
+	height: 120px;
+	line-height: 18px;
+	background:#484442;
+	margin-top: -1px;
+}
+.footer .f_lf{
+	width: 1200px;
+	height: 120px;
+	margin:0 auto;
+}
+.footer .f_lf .bottom{
+	width: 1000px;
+	height: 64px;
+	float: left;
+	margin-top: 30px;
+	margin-left: 30px;
+}
+.footer .bottom a{
+	color: #c3c3c3;
+	outline: 0;
+	font-size: 12px;
+	margin-right: 8px;
+}
+.footer i{
+	font-size: 14px;
+	color: #e7e7e7;
+}
+/*----f_rg----*/
+.f_rg{
+	width: 130px;
+	height: 40px;
+	/*background:pink;*/
+	float: right;
+	margin-top: 30px;
+	margin-right: 10px;
+}
+.f_rg img{
+	width: 112px;
+	height: 40px;
+	display: block;
+	margin-right: 10px;
+}
+/*----small-pic----*/
+.small-pic{
+	width: 60px;
+	height: 130px;
+	position: fixed;
+	right: 60px;
+	bottom: 10%;
+	z-index: 99;
+}
+.small-pic a{
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+	line-height: 60px;
+	background:#656766;
+	margin-bottom: 8px;
+}
+.icon-bgr{
+	width: 35px;
+	height: 34px;
+	line-height: 34px;
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 12px;
+}
+.icon-qq{
+	background:url(../images/bgr.png) -190px -77px;
+	
+}
+.icon-top{
+	background: url(../images/bgr.png) -190px -112px;
+	padding-top: -8px;
 }
