--- a/style/base.css
+++ b/style/base.css
@@ -1,14 +1,10 @@
-
-.glass img{
-	width: 100%;
-	height: 100%;
-}
 .grayBox{
-	display: block;
-	width: 150px;
-	height: 150px;
-	background-size:400px 400px;
+	display: none;
+	width: 100px;
+	height: 100px;
+	background-size:500px 500px;
 	background-position: 0 0;
+	background-image: url(http://img3.liwuyou.com/images/201609/source_img/3576_P_1473046086992.jpg!pro500.jpg);
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	position: absolute;
 	left: 0;
@@ -19,10 +15,10 @@
 	width: 500px;
 	height: 500px;
 	position: absolute;
-	left: 500px;
+	left: 510px;
 	top: 0;
-	border:1px solid #f10;
-	display:block;
+	border:2px solid #f99;
+	display:none;
 	overflow: hidden;
 }
 .big img{
@@ -140,17 +136,17 @@ input[type=radio]{margin-top:-3px}
 .bg-fbf8cc{background:#fbf8cc;}
 .bg-d1c0a5{background:#d1c0a5;}
 .bg-d93732{background:#d93732;}
-.icon-bgr{
+/*.icon-bgr{
 	display:inline-block;
 	vertical-align:middle;
 	margin-top:-3px;
 	background:url(../images/bgr.png);
-}
+}*/
 .icon-bgr1{
 	display:inline-block;
 	vertical-align:middle;
 	margin-top:-3px;
-	background:url(../images/bgr1.png);
+	background:url(../images/bgr.png);
 }
 .icon-logo{
 	width:57px;
