--- a/style/base2.css
+++ b/style/base2.css
@@ -286,7 +286,8 @@
 
     .goods-info .img-single {
         width: 500px;
-        /*border:1px solid #000;*/
+        border:1px solid #000;
+        /*position: relative;*/
     }
 
     .goods-info .img-single:hover {
@@ -305,6 +306,7 @@
 
     .goods-info .img-single img {
         width: 100%;
+        height: 100%;
     }
 
     .goods-info .img-single .loading img {
